--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,28 @@
   "manifest_version": 2,
   "permissions": [
     "activeTab",
-    "webRequest",
-    "https://*/*"
+    "storage",
+    "tabs",
+    "declarativeContent",
+    "storage",
+    "https://graph.facebook.com/*"
   ],
-  "background": [
+  "background": {
+    "scripts": ["js/backgroundScript.js"],
+    "persistent": false
+  },
+  "content_scripts": [
     {
-      "scripts": ["js/contentScript.js"],
-      "persistent": false
+      "matches": ["https://business.facebook.com/*"],
+      "run_at": "document_start",
+      "js": ["js/contentScript.js", "js/injected.js"]
     }
   ],
-  "web_accessible_resources": [
-    "js/XMLHttpRequest.js"
-  ]
+  "browser_action": {
+    "default_icon": "favicon.ico",
+    "default_popup": "popup.html"
+  },
+  "web_accessible_resources": ["js/injected.js"]
 }
+
+
